// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state 1`] = `
Object {
  "account": "0x1234",
  "baseToken": "WETH",
  "collRatio": undefined,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "isSafeCollRatio": true,
  "kind": "buy",
  "leverage": undefined,
  "liquidationPrice": undefined,
  "maxAmount": "0",
  "maxTotal": "0",
  "messages": Array [],
  "mta": Object {
    "daiAllowance": false,
    "marginableAssets": Array [],
    "proxy": Object {
      "options": Object {
        "address": "",
      },
    },
    "state": "setup",
    "totalAssetValue": "0",
    "totalAvailableDebt": "0",
    "totalDebt": "0",
  },
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [],
    "sell": Array [
      Object {
        "baseAmount": "3",
        "baseToken": undefined,
        "offerId": "1",
        "ownerId": "",
        "price": "1",
        "quoteAmount": "3",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
      Object {
        "baseAmount": "3",
        "baseToken": undefined,
        "offerId": "2",
        "ownerId": "",
        "price": "2",
        "quoteAmount": "6",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
      Object {
        "baseAmount": "3",
        "baseToken": undefined,
        "offerId": "3",
        "ownerId": "",
        "price": "4",
        "quoteAmount": "12",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
      Object {
        "baseAmount": "4",
        "baseToken": undefined,
        "offerId": "4",
        "ownerId": "",
        "price": "5",
        "quoteAmount": "20",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
    ],
  },
  "plan": undefined,
  "price": "1",
  "quoteToken": "DAI",
  "readyToProceed": false,
  "slippageLimit": "0.05",
  "submit": [Function],
  "view": "instantTradeForm",
}
`;

exports[`set price and amount 1`] = `
Object {
  "account": "0x1234",
  "amount": "1",
  "baseToken": "WETH",
  "collRatio": undefined,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "isSafeCollRatio": true,
  "kind": "buy",
  "leverage": undefined,
  "liquidationPrice": undefined,
  "maxAmount": "0",
  "maxTotal": "0",
  "messages": Array [],
  "mta": Object {
    "daiAllowance": false,
    "marginableAssets": Array [],
    "proxy": Object {
      "options": Object {
        "address": "",
      },
    },
    "state": "setup",
    "totalAssetValue": "0",
    "totalAvailableDebt": "0",
    "totalDebt": "0",
  },
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [],
    "sell": Array [
      Object {
        "baseAmount": "3",
        "baseToken": undefined,
        "offerId": "1",
        "ownerId": "",
        "price": "1",
        "quoteAmount": "3",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
      Object {
        "baseAmount": "3",
        "baseToken": undefined,
        "offerId": "2",
        "ownerId": "",
        "price": "2",
        "quoteAmount": "6",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
      Object {
        "baseAmount": "3",
        "baseToken": undefined,
        "offerId": "3",
        "ownerId": "",
        "price": "4",
        "quoteAmount": "12",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
      Object {
        "baseAmount": "4",
        "baseToken": undefined,
        "offerId": "4",
        "ownerId": "",
        "price": "5",
        "quoteAmount": "20",
        "quoteToken": undefined,
        "timestamp": 2019-10-01T00:00:00.000Z,
        "type": "buy",
      },
    ],
  },
  "plan": undefined,
  "price": "1",
  "priceImpact": "0",
  "quoteToken": "DAI",
  "readyToProceed": false,
  "slippageLimit": "0.05",
  "submit": [Function],
  "total": "1",
  "view": "instantTradeForm",
}
`;
